force-app/main/default/objects/Account_Number_Detail__c/fields/Shipping_Terms__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Terms__c</fullName>
    <description>Shipping terms</description>
    <label>Shipping Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Free Shipping</fullName>
            </value>
            <value>
                <fullName>Free Shipping on orders over $1000</fullName>
            </value>
            <value>
                <fullName>Free Shipping on orders over $500</fullName>
            </value>
            <value>
                <fullName>No Free Shipping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>