force-app/main/default/objects/Account_Number_Detail__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <description>Payment Terms</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Payment in full by April 1st</fullName>
            </value>
            <value>
                <fullName>1/2 April 1st, 1/2 May 1st</fullName>
                <label>Payment In Full by May 1st</label>
            </value>
            <value>
                <fullName>1/3 April 1st, 1/3 May 1st, 1/3 June 1st</fullName>
                <label>Payment In Full by June 1st</label>
            </value>
            <value>
                <fullName>Cash in Advance - 2%</fullName>
            </value>
            <value>
                <fullName>Cash in Advance - 4%</fullName>
            </value>
            <value>
                <fullName>Cash in Advance - 6%</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>On Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>