force-app/main/default/objects/Account_Number_Detail__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Different account types</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Boats</fullName>
            </value>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Parts Booking Order</fullName>
            </value>
            <value>
                <fullName>Rebates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>